Internal django authentication Some minor layout changes

--- a/templates/webui/base.html
+++ b/templates/webui/base.html
@@ -16,7 +16,7 @@
 
         <script type="text/javascript" src="{% static 'js/reflection.js' %}"></script>
 
-        <title>ShowTime |{% block title %}{% endblock %}</title>
+        <title>ShowTime{% block title %}{% endblock %}</title>
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
