--- a/templates/webui/player.html
+++ b/templates/webui/player.html
@@ -1,6 +1,6 @@
 {% extends 'webui/base.html' %}
 
-{% block title %} {{ object.tvshow }} | {{ object }}{% endblock %}
+{% block title %} | {{ object.tvshow }} | {{ object }}{% endblock %}
 
 {% block content %}
         <div class="span11">
